# linux_daemon_sample

./: make_daemon
cpp/: CMakeLists.txt  daemon_skeleton.cc  daemon_skeleton.h  main.cc  sample.cc  sample.h
cpp/daemon_sample/: CMakeLists.txt  README
cpp/daemon_sample/include/: daemon_sample.h
cpp/daemon_sample/src/: daemon_sample.cc  main.cc
cpp/lib/: CMakeLists.txt
cpp/lib/include/: daemon_template.h
cpp/lib/src/: daemon_template.cc
